--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs "$rootProject.projectDir/lib"
+        }
+
         mavenCentral()
         jcenter()
         maven {
