--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -3,9 +3,16 @@ plugins {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'com.google.guava:guava:21.0'
-    compile 'org.projectfloodlight:openflowj:3.2.0-SNAPSHOT'
-    compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
+    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0'
+    //compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
+    //compile 'org.slf4j:slf4j-api:1.7.25'
+    //compile 'org.slf4j:slf4j-log4j12:1.7.25'
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.25'
+    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.0.9'
+    compile group: 'ch.qos.logback', name:'logback-core', version: '1.0.9'
+    compile 'com.google.guava:guava:21.0'
+    compile 'io.netty:netty-all:4.0.0.Final'
+    /*compile 'org.projectfloodlight:openflowj:3.5.0-SNAPSHOT'*/
+    compile 'lib/org.projectfloodlight:openflowj:3.5.1-SNAPSHOT@jar'
 }
